Refector: Tours And Open Houses Page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/Components/Pages/profileInfo/ProfileInfoDetails.jsx"  ],
   "exclude": [
     "node_modules"
   ]
