--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@types/node": "^20.11.16",
+		"@types/react": "^18.2.52",
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
 		"sharp": "^0.33.2",
-		"swiper": "^11.0.5"
+		"swiper": "^11.0.5",
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.17",
