--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
 		"swiper": "^11.0.5"
 	},
 	"devDependencies": {
+		"@types/node": "20.11.17",
+		"@types/react": "18.2.55",
 		"autoprefixer": "^10.4.17",
 		"postcss": "^8.4.33",
-		"tailwindcss": "^3.4.1"
+		"tailwindcss": "^3.4.1",
+		"typescript": "5.3.3"
 	}
 }
